Fix subtitle truncation

--- a/styles/musicinfo.scss
+++ b/styles/musicinfo.scss
@@ -109,6 +109,7 @@
     font-weight: 250;
     font-size: 14px;
     min-width: 0;
+    max-width: 100%;
 }
 .item-row {
     height: 80px;
